5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1800_2564.log
== TEST (2019-06-05 19:55:31) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = arrau(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg = gg + 1
	elif barça[i] == real[i]:
		gg = gg + 1
	elif barça[i] < real[i]:
		gg = gg + 1
	i = i + 1 
g1g = arange(gg)
print(g1g)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:55:54) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg = gg + 1
	elif barça[i] == real[i]:
		gg = gg + 1
	elif barça[i] < real[i]:
		gg = gg + 1
	i = i + 1 
g1g = arange(gg)
print(g1g)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:56:00) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg = gg + 1
	elif barça[i] == real[i]:
		gg = gg + 1
	elif barça[i] < real[i]:
		gg = gg + 1
	i = i + 1 
g1g = arange(gg)
print(g1g)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:56:22) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg = gg + 1
	elif barça[i] == real[i]:
		gg = gg + 1
	elif barça[i] < real[i]:
		gg = gg + 1
	i = i + 1 
g1g = arange(gg)
print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 19:59:52) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg[i] = gg[i] + 1
	elif barça[i] == real[i]:
		gg[i] = gg[i] + 1
	elif barça[i] < real[i]:
		gg[i] = gg[i] + 1
	i = i + 1 
g1g = arange(gg)
print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:00:22) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg = gg[i] + 1
	elif barça[i] == real[i]:
		gg = gg[i] + 1
	elif barça[i] < real[i]:
		gg = gg[i] + 1
	i = i + 1 
g1g = arange(gg)
print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:01:05) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

i = 0
gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

while i< size(barça):
	if barça[i] >real[i]:
		gg[i] = gg + 1
	elif barça[i] == real[i]:
		gg[i] = gg + 1
	elif barça[i] < real[i]:
		gg[i] = gg + 1
	i = i + 1 
g1g = arange(gg)
print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:02:54) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))


gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		gg[i] = gg + 1
	elif barça[i] == real[i]:
		gg[i] = gg + 1
	elif barça[i] < real[i]:
		gg[i] = gg + 1 

print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:03:23) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))


gg = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		gg = gg + 1
	elif barça[i] == real[i]:
		gg = gg + 1
	elif barça[i] < real[i]:
		gg = gg + 1 

print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:04:17) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		y = y + 1 

print(gg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:04:33) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		y = y + 1 

print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:04:58) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x + 1 

	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:08:29) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		s = s + 1
	elif barça[i] == real[i]:
		b = b + 1
	elif barça[i] < real[i]:
		c = c + 1 

	print(s)
	print(b)
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:10:46) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		s = s + 1
	elif barça[i] == real[i]:
		b = b + 1
	elif barça[i] < real[i]:
		c = c + 1 

print(s)print(b)print(c)

-- ERROR:
File "XXXX", line 19
    print(s)print(b)print(c)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:10:53) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(barça,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		s = s + 1
	elif barça[i] == real[i]:
		b = b + 1
	elif barça[i] < real[i]:
		c = c + 1 

print(s)
print(b)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:15:05) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(i,dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x + 1 
	z = arange(x)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:15:46) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(b, dtype= int)
y = zeros(real, dtype= int)

for i in arange(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x + 1 
	z = arange(x)
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:18:09) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(b, dtype= int)
y = zeros(real, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x + 1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x + 1 
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:19:22) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))
s = 0
b = 0 
c = 0
x = zeros(b, dtype= int)
y = zeros(real, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		c = c + 1
	elif barça[i] == real[i]:
		c = c + 1
	elif barça[i] < real[i]:
		c = c + 1 
	
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:23:06) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(6, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x +1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x +1 
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:23:43) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(6, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x +1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:25:45) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x +1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:27:05) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x[i] +1
	elif barça[i] == real[i]:
		x = x[i] + 1
	elif barça[i] < real[i]:
		x = x[i] +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:40:20) 
-- CODE:
from numpy import*

barça = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x = x +1
	elif barça[i] == real[i]:
		x = x + 1
	elif barça[i] < real[i]:
		x = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:38) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barça)):
	if barça[i] >real[i]:
		x[0] = x +1
	elif barça[i] == real[i]:
		x[1] = x + 1
	elif barça[i] < real[i]:
		x[2] = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:55) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barça[i] >real[i]:
		x[0] = x +1
	elif barça[i] == real[i]:
		x[1] = x + 1
	elif barça[i] < real[i]:
		x[2] = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:43:14) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barca[i] >real[i]:
		x[0] = x +1
	elif barca[i] == real[i]:
		x[1] = x + 1
	elif barca[i] < real[i]:
		x[2] = x +1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:43:47) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barca[i] >real[i]:
		x[0] = x +1
	elif barca[i] == real[i]:
		x[1] = x + 1
	elif barca[i] < real[i]:
		x[2] = x + 1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:44:31) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barca[i] >real[i]:
		x[0] = x[0] +1
	elif barca[i] == real[i]:
		x[1] = x[1] + 1
	elif barca[i] < real[i]:
		x[2] = x[2] + 1 
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:44:49) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barca[i] >real[i]:
		x[0] = x[0] +1
	elif barca[i] == real[i]:
		x[1] = x[1] + 1
	elif barca[i] < real[i]:
		x[2] = x[2] + 1 
	
print(x)
-- EXECUTION TIME:
0.858744
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:12:13) 
-- CODE:
from numpy import*

barca = array(eval(input("gol:")))
real = array(eval(input("gol:")))

x = zeros(3, dtype= int)

for i in range(size(barca)):
	if barca[i] >real[i]:
		x[0] = x[0] +1
	elif barca[i] == real[i]:
		x[1] = x[1] + 1
	elif barca[i] < real[i]:
		x[2] = x[2] + 1 
	
print(x)
-- EXECUTION TIME:
0.970653
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
